--- a/springbootbackend/src/main/resources/application.properties
+++ b/springbootbackend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=springbootbackend
-server.port=2000
+server.port=2006
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/projectdb
+spring.datasource.url=jdbc:mysql://mysqldb:3306/db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=docker
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
