--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mysql:8
     environment:
       MYSQL_ROOT_PASSWORD: docker
-      MYSQL_DATABASE: db
+      MYSQL_DATABASE: practicedb
     ports:
       - "3307:3306"
     volumes:
