--- a/springbootbackend/src/main/resources/application.properties
+++ b/springbootbackend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=springbootbackend
 server.port=2006
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysqldb:3306/db
+spring.datasource.url=jdbc:mysql://mysqldb:3306/practicedb
 spring.datasource.username=root
 spring.datasource.password=docker
 
